Fix absolute positioning to work with - Scrolling of inner elements (overflow: auto): position relative to scrolled element, so that dropdown follows scrolling - Dialogs and other elements with z-index: inherit parent's z-index

--- a/styles/token-input-facebook.css
+++ b/styles/token-input-facebook.css
@@ -72,7 +72,6 @@ li.token-input-input-token-facebook {
 
 div.token-input-dropdown-facebook {
     position: absolute;
-    width: 400px;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
