--- a/styles/token-input.css
+++ b/styles/token-input.css
@@ -64,7 +64,6 @@ li.token-input-selected-token span {
 
 div.token-input-dropdown {
     position: absolute;
-    width: 400px;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
